# graphics

./: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  light_config.h  mesh.h  shaderprogram.h
shaders/: container_fragment.frag  cube_vertex.vert  light_fragment.frag  skybox_fragment.frag  skybox_vertex.vert  vertex.vert
src/: camera.cpp  mesh.cpp  shaderprogram.cpp  tiny_obj_loader.cpp
